--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "https://asset-packagist.org"
+            "url": "https://packagist.phpcomposer.com"
         }
     ]
 }
